--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>KyuTyr</name>
-	<comment></comment>
+	<comment>Projet de jeu</comment>
 	<projects>
 	</projects>
 	<buildSpec>
